agregar un prima

--- a/tareas/raz/tarea2.ipynb
+++ b/tareas/raz/tarea2.ipynb
@@ -432,7 +432,7 @@
     "\n",
     "* $\\mathbb{D}_{x_0}z = \\mathbb{D}_{x_0}u \\cdot \\frac{1}{\\mathbb{D}_{x_0}w}$\n",
     "* $\\mathbb{D}_{x_0}z = \\mathbb{D}_{x_0}u \\cdot \\mathbb{D}_{x_0}\\frac{1}{w}$\n",
-    "* $\\mathbb{D}_{x_0}z = \\left(\\frac{u_0}{w_0}, \\frac{-u_0 w_0}{w_0^2} + \\frac{u_0'}{w_0} \\right) $\n",
+    "* $\\mathbb{D}_{x_0}z = \\left(\\frac{u_0}{w_0}, \\frac{-u_0 w_0'}{w_0^2} + \\frac{u_0'}{w_0} \\right) $\n",
     "* $\\mathbb{D}_{x_0}z = \\left(\\frac{u_0}{w_0}, \\frac{u_0' w_0 -u_0 w_0'}{w_0^2} \\right) $\n"
    ]
   },
